<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".activities.teams.ScheduledProposedWalkActivity">

        <TextView
            android:id="@+id/no_proposed_or_scheduled_walks_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:visibility="gone"
            android:text="@string/no_walks_to_show"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/schedule_propose_tv_walk_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:visibility="gone"
            android:text="@string/status_proposed"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/schedule_propose_tv_proposed_by_prompt"
            android:text="@string/proposed_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:textSize="@dimen/details_size"
            android:visibility="gone"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/no_proposed_or_scheduled_walks_tv"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/schedule_propose_tv_proposed_by_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/unspecified"
            android:visibility="gone"
            android:textSize="@dimen/details_size"
            app:layout_constraintTop_toBottomOf="@+id/schedule_propose_tv_proposed_by_prompt"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/schedule_propose_tv_walk_name_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:text="@string/walk_name"
            android:textSize="@dimen/details_size"
            android:visibility="gone"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/schedule_propose_tv_proposed_by_display"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/schedule_propose_tv_walk_name_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/unspecified"
            android:visibility="gone"
            android:textSize="@dimen/details_size"
            app:layout_constraintTop_toBottomOf="@+id/schedule_propose_tv_walk_name_prompt"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/schedule_propose_tv_starting_loc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:text="@string/starting_loc"
            android:textSize="@dimen/details_size"
            android:visibility="gone"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/schedule_propose_tv_walk_name_display" />

        <TextView
            android:id="@+id/schedule_propose_tv_starting_loc_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/unspecified"
            android:text=""
            android:visibility="gone"
            android:textSize="@dimen/details_size"
            app:layout_constraintTop_toBottomOf="@+id/schedule_propose_tv_starting_loc"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/schedule_propose_tv_walk_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:text="@string/date"
            android:textSize="@dimen/details_size"
            android:visibility="gone"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/schedule_propose_tv_starting_loc_display" />

        <TextView
            android:id="@+id/schedule_propose_tv_walk_date_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/unspecified"
            android:visibility="gone"
            android:clickable="true"
            android:focusable="true"
            android:textSize="@dimen/details_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/schedule_propose_tv_walk_date"/>

    <LinearLayout
        android:id="@+id/schedule_propose_linear_layout_status_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/schedule_propose_tv_walk_date_display">

        <Button
            android:id="@+id/schedule_propose_btn_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"
            style="?android:attr/buttonBarButtonStyle"
            android:drawableStart="@drawable/ic_check_green_24dp"
            android:text="@string/accept" />

        <Button
            android:id="@+id/schedule_propose_btn_decline_cant_come"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:textColor="@color/colorBlack"
            android:text="@string/decline_cant_come"
            android:textSize="12sp"
            android:drawableStart="@drawable/ic_event_busy_black_24dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/schedule_propose_btn_decline_not_interested"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:padding="5dp"
            android:textColor="@color/colorBlack"
            android:text="@string/decline_not_interested"
            android:textSize="12sp"
            android:drawableStart="@drawable/ic_close_black_24dp"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/schedule_propose_linear_layout_decision_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/schedule_propose_tv_walk_date_display">

        <Button
            android:id="@+id/schedule_propose_btn_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"
            style="?android:attr/buttonBarButtonStyle"
            android:drawableStart="@drawable/ic_event_available_black_24dp"
            android:text="@string/schedule" />

        <Button
            android:id="@+id/schedule_propose_btn_withdraw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:padding="5dp"
            android:textColor="@color/colorBlack"
            android:text="@string/withdraw"
            android:textSize="12sp"
            android:drawableStart="@drawable/ic_event_busy_black_24dp"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_status_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_header"
        android:textSize="@dimen/details_size"
        android:textStyle="bold"
        android:visibility="gone"
        android:layout_marginTop="40dp"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@+id/schedule_propose_linear_layout_status_buttons"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <ListView
        android:id="@+id/list_members_with_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_status_prompt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>